--- a/views/index.hbs
+++ b/views/index.hbs
@@ -20,7 +20,7 @@
         You need to enable JavaScript to run this app.
     </noscript>
     <div id="f1" class="container mt-5">
-        <form id="form1" class="form-inline">
+        <form id="form1" class="form-inline   ml-4">
             <div class="form-group">
                 <!--label for="filterlabel mb-2 mr-sm-2">Filter</label-->
                 <input type="text" class="form-control  mr-sm-2" id="filter" aria-describedby="emailHelp" placeholder="Enter your filter">
@@ -29,7 +29,7 @@
             <button "submit1" type="submit" class="btn btn-primary">Submit</button>
         </form>
         <div id="list" class='m-4'>
-            <div class="card ml-2  mb-2">
+            <div class="card ml-0  mb-2">
                 <div class="card-body">
                     card1
                 </div>
